Update 4.1 Apply secure design principles in network architectures.md

--- a/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
+++ b/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
@@ -73,23 +73,24 @@ The lowest layer, known as the **Physical Layer**, deals with the actual transmi
 Moving up, the **Data Link Layer** is responsible for MAC (Media Access Control) addressing, error detection, and handling data frames between devices on the same network segment. Attackers at this layer often exploit weaknesses in switching, MAC address spoofing, and VLAN hopping to intercept or redirect network traffic. Techniques such as ARP (Address Resolution Protocol) poisoning allow attackers to manipulate MAC address tables, enabling them to launch Man-in-the-Middle (MITM) attacks. Mitigation strategies include port security, dynamic ARP inspection (DAI), and VLAN segmentation to prevent unauthorized traffic manipulation.
 
 :bulb: A MAC (Media Access Control) address is a unique identifier assigned to the network interface of a device for communication on a network. It is used in data link layer protocols (like Ethernet and Wi-Fi) to ensure that data packets are correctly addressed to devices on a local network.
+
 Here are some key characteristics of a MAC address:
 
-Format: A MAC address is typically written as a 12-digit hexadecimal number, often displayed in 6 groups of two digits separated by colons or hyphens (e.g., 00:1A:2B:3C:4D:5E).
+**Format:** A MAC address is typically written as a 12-digit hexadecimal number, often displayed in 6 groups of two digits separated by colons or hyphens (e.g., 00:1A:2B:3C:4D:5E).
 
-Uniqueness: Each MAC address is designed to be globally unique, with the first 3 bytes identifying the manufacturer (assigned by the IEEE) and the last 3 bytes being a serial number assigned to the device by the manufacturer.
+**Uniqueness:** Each MAC address is designed to be globally unique, with the first 3 bytes identifying the manufacturer (assigned by the IEEE) and the last 3 bytes being a serial number assigned to the device by the manufacturer.
 
-Function: The MAC address is used for local network communication. It helps devices identify each other within a local network, such as between a computer and a router or between devices on a wireless network.
+**Function:** The MAC address is used for local network communication. It helps devices identify each other within a local network, such as between a computer and a router or between devices on a wireless network.
 
-Static: Unlike IP addresses, which can change depending on the network, the MAC address is generally static and hardcoded into the network interface hardware (like a Wi-Fi card or Ethernet port).
+**Static:** Unlike IP addresses, which can change depending on the network, the MAC address is generally static and hardcoded into the network interface hardware (like a Wi-Fi card or Ethernet port).
 
-Role in Networking: The MAC address is used in protocols like ARP (Address Resolution Protocol) to map IP addresses to their corresponding MAC addresses, ensuring the correct destination for network traffic.
+**Role in Networking:** The MAC address is used in protocols like ARP (Address Resolution Protocol) to map IP addresses to their corresponding MAC addresses, ensuring the correct destination for network traffic.
 
 At the **Network Layer**, IP addresses are used to route data between devices across different networks. Security challenges at this layer include IP spoofing, route hijacking, and Denial-of-Service (DoS) attacks. Attackers may manipulate routing protocols to redirect traffic or overwhelm network resources. Firewalls, intrusion detection/prevention systems (IDS/IPS), and Network Access Control (NAC) policies help secure this layer by filtering malicious traffic and enforcing segmentation policies.
 
 The **Transport Layer** is where end-to-end communication is managed, ensuring that data is properly sequenced and delivered without corruption or loss. This layer uses TCP (Transmission Control Protocol) and UDP (User Datagram Protocol), both of which introduce security risks. Attackers frequently exploit TCP-based attacks, such as SYN floods, session hijacking, and port scanning, to disrupt or intercept communications. Rate limiting, deep packet inspection (DPI), and Transport Layer Security (TLS) encryption are commonly used to protect against these threats.
 
-:bulb: A socket is an endpoint for communication between two machines over a network. It serves as an interface between the application and the transport layer. A socket allows an application to send or receive data across a network. Each socket is uniquely identified by a combination of the following:
+:bulb: A **socket** is an endpoint for communication between two machines over a network. It serves as an interface between the application and the transport layer. A socket allows an application to send or receive data across a network. Each socket is uniquely identified by a combination of the following:
 - IP address: The unique address assigned to a device on the network (e.g., 192.168.1.1).
 - Port number: A numeric identifier that helps differentiate different services or processes on the same machine (e.g., 80 for HTTP, 443 for HTTPS).
 - Transport protocol: The protocol being used, typically either TCP (Transmission Control Protocol) or UDP (User Datagram Protocol).
@@ -99,30 +100,30 @@ In simple terms, a socket is a combination of:
 - The port number used to identify the specific service or application.
 - The protocol (TCP or UDP) that specifies the connection type.
 
-A port is a 16-bit number (ranging from 0 to 65535) used by the transport layer to direct data to the correct application or process running on a device. Ports are logically associated with the services running on a machine, helping the operating system manage multiple applications using the same network interface.
+A **port** is a 16-bit number (ranging from 0 to 65535) used by the transport layer to direct data to the correct application or process running on a device. Ports are logically associated with the services running on a machine, helping the operating system manage multiple applications using the same network interface.
 
 Ports are divided into three categories:
-- Well-known ports (0–1023): These are reserved for common services and protocols. For example:
+- **Well-known ports (0–1023):** These are reserved for common services and protocols. For example:
 Port 80: HTTP (Hypertext Transfer Protocol) – used by web browsers.
 Port 443: HTTPS (HTTP Secure) – used for encrypted web traffic.
 Port 25: SMTP (Simple Mail Transfer Protocol) – used for sending emails.
-- Registered ports (1024–49151): These are used by software applications for communication, but they are not as commonly associated with standardized services. Developers can register these ports with the IANA (Internet Assigned Numbers Authority) for their specific services.
-- Dynamic or Private ports (49152–65535): These are ephemeral ports used for short-lived communications. They are often assigned temporarily by the operating system for client-side connections, such as when your browser connects to a website. These ports are not assigned to any particular service and are typically used for the duration of the session.
+- **Registered ports (1024–49151):** These are used by software applications for communication, but they are not as commonly associated with standardized services. Developers can register these ports with the IANA (Internet Assigned Numbers Authority) for their specific services.
+- **Dynamic or Private ports (49152–65535):** These are ephemeral ports used for short-lived communications. They are often assigned temporarily by the operating system for client-side connections, such as when your browser connects to a website. These ports are not assigned to any particular service and are typically used for the duration of the session.
 
 When a device communicates over the network, it uses a combination of the IP address and port number to ensure that data is sent to the correct application. This is what makes it possible for multiple applications on the same machine to use the same network interface.
-- Client-side (Outbound connection):
+- **Client-side (Outbound connection)**:
 The client application (e.g., a web browser) creates a socket on a local port and sends data to a remote server using the server's IP address and the target service's port number (e.g., port 80 for HTTP).
 The operating system assigns a random source port from the dynamic range (49152–65535) for the communication. This allows multiple outgoing connections from the same client device without conflicts.
-- Server-side (Inbound connection):
+- **Server-side (Inbound connection)**:
 The server listens for incoming connections on a specific port. For instance, a web server will typically listen on port 80 (HTTP) or 443 (HTTPS).
 When a connection request arrives, the server uses the destination port to determine which application (service) should handle the data.
 
 The **Session Layer** manages establishing, maintaining, and terminating connections between applications. While this layer is less frequently targeted directly, weaknesses in session management can lead to session hijacking, replay attacks, and unauthorized session resumption. Attackers may steal session tokens or manipulate session state information to gain unauthorized access to applications. Secure authentication mechanisms, proper session expiration policies, and encrypted session tokens help mitigate risks at this layer.
 
 :bulb: In the OSI Session Layer, communication between devices can happen in three different modes:
-- Simplex: Data flows in one direction only. One device sends, and the other only receives, like a radio broadcast or TV transmission.
-- Half-Duplex: Data flows in both directions, but one at a time. Think of a walkie-talkie, where only one person speaks at a time while the other listens.
-- Full-Duplex: Data flows in both directions simultaneously, like a phone call, where both people can talk and listen at the same time.
+- **Simplex:** Data flows in one direction only. One device sends, and the other only receives, like a radio broadcast or TV transmission.
+- **Half-Duplex:** Data flows in both directions, but one at a time. Think of a walkie-talkie, where only one person speaks at a time while the other listens.
+- **Full-Duplex:** Data flows in both directions simultaneously, like a phone call, where both people can talk and listen at the same time.
 The Session Layer helps establish, manage, and synchronize these communication modes, ensuring that devices communicate efficiently and without conflicts.
 
 At the **Presentation Layer**, data is formatted for proper interpretation, which includes encryption, compression, and character encoding. This layer is where cryptographic protocols such as SSL/TLS operate, ensuring secure data transmission. Attacks at this layer often involve SSL stripping, downgrade attacks, and improper encryption implementations. The use of strong encryption standards, proper certificate validation, and secure cipher suites is critical to maintaining the confidentiality and integrity of transmitted data.
@@ -135,7 +136,7 @@ The OSI model remains valuable for understanding attack surfaces, segmentation s
 
 By applying defense-in-depth principles, organizations can reduce exposure to threats at each layer, ensuring that even if one layer is compromised, the attacker does not gain unrestricted access to critical assets. From physical security at the hardware level to encryption at the application level, a thorough understanding of the OSI model empowers cybersecurity professionals to design, implement, and maintain robust security postures against ever-evolving cyber threats.
 
-:brain: All People Seem To Need Data Protection … will help you remember the 7 layers of the OSI model.
+:brain: *All People Seem To Need Data Protection* … will help you remember the 7 layers of the OSI model.
 
 :bulb: Non-IP Legacy Protocols refer to older networking protocols that were used before the widespread adoption of the Internet Protocol (IP). These protocols were often designed for specific network architectures or industries and are still found in legacy systems. Here are a few key ones:
 - IPX/SPX (Internetwork Packet Exchange/Sequenced Packet Exchange) – Used in Novell NetWare networks, IPX handled addressing while SPX ensured reliable communication.
