Update 4.1 Apply secure design principles in network architectures.md

--- a/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
+++ b/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
@@ -260,12 +260,11 @@ IPv4 is the fourth version of the Internet Protocol and remains widely used desp
 IPv4 addresses are written in dotted decimal notation, where four 8-bit (or octet) values are separated by dots. Each octet represents a number between 0 and 255.
 IPv4 addresses are divided into five classes (A to E) to allocate network sizes effectively.
 
-<img width="512" height="150" alt="Ipv4_Ipv6" src="https://github.com/user-attachments/assets/5a4e4073-1f52-48e7-8b39-0b1b371b89cd" />
+<img width="979" height="287" alt="IPv4Addresses drawio" src="https://github.com/user-attachments/assets/d7ac3587-1419-415d-aa4a-246c1513ca03" />
+
 
 Not all IPv4 addresses are meant for internet use. Some are reserved for private networks.
 Private addresses are used within local networks and not routable on the public internet. Devices using these addresses require NAT (Network Address Translation) to communicate externally.
-
-<img width="512" height="150" alt="Ipv4_private" src="https://github.com/user-attachments/assets/1509daa1-dfc9-42c4-ab38-1b33848c0add" />
 
 For example, Your home router has one public IP (e.g., 203.0.113.5) but assigns private IPs (192.168.1.x) to devices inside your network. NAT (Network Address Translation) translates internal requests to external ones using the router's public IP.
 
