Update 4.1 Apply secure design principles in network architectures.md

--- a/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
+++ b/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
@@ -292,7 +292,7 @@ Each of these subnets can have 62 usable IP addresses (after excluding the netwo
 
 :link: You don’t need to calculate subnets manually, but you must understand how subnetting impacts security policies, access control, and network architecture. A detailed explanation of subnetting is available [here] (https://en.wikipedia.org/wiki/Subnet)
 
-IPv6 was introduced to solve IPv4 exhaustion. It uses a 128-bit address space, providing 2¹²⁸ addresses (more than enough for every device on Earth).
+**IPv6** was introduced to solve IPv4 exhaustion. It uses a 128-bit address space, providing 2¹²⁸ addresses (more than enough for every device on Earth).
 IPv6 addresses are written in hexadecimal notation and divided into 8 groups of 16 bits, separated by colons.
 An Example of an IPv6 Address is: 2001:0db8:85a3:0000:0000:8a2e:0370:7334
 
@@ -403,7 +403,7 @@ Common ICMP Messages:
 
 ICMP is used primarily for network diagnostics, allowing administrators to check if devices are reachable, measure round-trip time, and identify network issues.
 
-IGMP (Internet Group Management Protocol) is used by hosts and adjacent routers to establish multicast group memberships. It operates at the network layer and enables devices to inform their local routers about their multicast group memberships.
+**IGMP (Internet Group Management Protocol)** is used by hosts and adjacent routers to establish multicast group memberships. It operates at the network layer and enables devices to inform their local routers about their multicast group memberships.
 How IGMP Works:
 - Devices that want to join a multicast group send an IGMP report to the local router.
 - The router then ensures that multicast traffic for that group is forwarded to the device.
