--- a/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
+++ b/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
@@ -543,6 +543,40 @@ Modes:
 Key Exchange:
 IKE (Internet Key Exchange): A protocol used to securely exchange encryption keys between the two endpoints.
 
+```mermaid
+flowchart LR
+    IPSEC[IPsec - Internet Protocol Security]:::title
+
+    %% Protocols
+    IPSEC --> Protocols[Protocols]
+    Protocols --> AH[AH - Authentication Header]
+    AH --> AHDesc[Provides **integrity** and **authentication** of IP packets. Does **not** encrypt payload. Protects against tampering and replay attacks.]
+    Protocols --> ESP[ESP - Encapsulating Security Payload]
+    ESP --> ESPDesc[Provides **confidentiality**, **integrity**, and **authentication**. Can encrypt payload and optionally provide anti-replay protection.]
+
+    %% Modes
+    IPSEC --> Modes[Modes]
+    Modes --> Transport[Transport Mode]
+    Transport --> TransportDesc[Encrypts or authenticates **only the payload** of the IP packet. Used for **host-to-host** communication.]
+    Modes --> Tunnel[Tunnel Mode]
+    Tunnel --> TunnelDesc[Encrypts **entire IP packet** and encapsulates it in a new IP header. Used for **site-to-site VPNs**.]
+
+    %% Key Exchange
+    IPSEC --> KeyExchange[Key Exchange]
+    KeyExchange --> IKE[Internet Key Exchange - IKE]
+    IKE --> IKEDesc[Negotiates **security associations -SAs-**, including encryption/authentication algorithms and session keys. Can use **Main or Aggressive mode**.]
+
+    %% Styling
+    classDef title fill:#f9f,stroke:#333,stroke-width:2px
+    class IPSEC title
+
+    %% Styling
+    classDef title fill:#e0e0e0,stroke:#333,stroke-width:2px
+    class IPSEC title
+    classDef box fill:#f5f5f5,stroke:#333,stroke-width:1px
+    class Protocols,AH,AHDesc,ESP,ESPDesc,Modes,Transport,TransportDesc,Tunnel,TunnelDesc,KeyExchange,IKE,IKEDesc box
+```
+
 **Secure Shell (SSH)**
 
 Secure Shell (SSH) is a protocol designed to provide a secure method of remote login and other network services over an unsecured network, like the internet. SSH operates at the application layer (Layer 7) and is commonly used for remote administration of network devices and servers, replacing older protocols like Telnet, which transmit data, including usernames and passwords, in plain text.
