Update 4.1 Apply secure design principles in network architectures.md

--- a/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
+++ b/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
@@ -603,14 +603,14 @@ SSH also provides a secure channel for port forwarding, allowing encrypted tunne
 
 SSL and its successor, TLS, are cryptographic protocols that provide security for communications over a computer network. While SSL is now considered deprecated due to various vulnerabilities, TLS continues to be the dominant protocol used to secure web traffic. Both SSL and TLS function primarily at the transport layer (Layer 4), securing data exchanged between clients and servers, particularly in web applications, through HTTPS.
 The primary function of SSL/TLS is to provide confidentiality and integrity for data in transit. This is achieved through a combination of asymmetric encryption for key exchange, symmetric encryption for encrypting the data, and message authentication codes (MACs) for ensuring integrity. The process begins with the handshake protocol, during which the client and server agree on encryption algorithms, authenticate each other (through public-key certificates), and establish shared keys. Once the handshake is complete, the actual data transfer occurs using symmetric encryption, which is faster than asymmetric encryption and more suited for transmitting large amounts of data.
-One of the most critical aspects of SSL/TLS is authentication. The server typically presents a digital certificate to the client, which is issued by a trusted certificate authority (CA). This certificate includes the public key of the server, allowing the client to verify the server's identity and ensure that it is communicating with the intended entity. SSL/TLS also supports forward secrecy, ensuring that even if a private key is compromised in the future, past communications cannot be decrypted.
+One of the most critical aspects of SSL/TLS is authentication. The server typically presents a digital certificate to the client, which is issued by a trusted certificate authority (CA). This certificate includes the public key of the server, allowing the client to verify the server's identity and ensure that it is communicating with the intended entity. SSL/TLS also supports **forward secrecy**, ensuring that even if a private key is compromised in the future, past communications cannot be decrypted.
 SSL/TLS is used not only for securing web traffic but also for securing other protocols such as email (SMTP, IMAP, POP3) and file transfer (FTPS), making it an essential protocol for safeguarding the vast majority of internet-based communications.
 
 | Feature             | Description                                                                                                                                              |
 |----------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------|
 | **Protocol**         | Transport Layer Security (TLS)                                                                                                                          |
 | **Purpose**          | Provides confidentiality and integrity for data in transit.                                                                                             |
-| **Replaces**         | TLS                                                                                                                                                      |
+| **Replaces**         | SSL                                                                                                                                                     |
 | **Encryption**       | - Asymmetric encryption for key exchange <br> - Symmetric encryption for encrypting data <br> - Message Authentication Codes (MACs) for integrity        |
 | **Handshake Protocol** | Initial communication where client and server agree on encryption algorithms, authenticate each other, and establish shared keys.                       |
 | **Data Transfer**    | After the handshake, symmetric encryption is used for data transfer, providing faster encryption for large amounts of data.                              |
@@ -705,9 +705,9 @@ TCP/IP is a well-established protocol suite that serves as the backbone of moder
 Consider for example the process of transferring data from a web server to a web browser. The application layer begins with HTTP (Hypertext Transfer Protocol), which is the protocol used for web communication. This HTTP data is then passed to the transport layer, where it is TCP-encapsulated. TCP is a connection-oriented protocol that ensures reliable data transmission by providing error-checking and flow control mechanisms. After the data is encapsulated by TCP, it moves to the network layer, where IP (Internet Protocol) encapsulates the entire packet. At the data link layer, the IP packet is then encapsulated by the Ethernet protocol, which adds the necessary physical addressing information to enable transmission over a local area network.
 
 This process of encapsulation ensures that each layer of the network stack can focus on its specific tasks while maintaining the integrity and security of the communication. For example, SSL/TLS encryption can be added to the data before it is passed through the TCP layer to provide additional confidentiality, especially when transmitting sensitive information such as login credentials or financial data.
-While encapsulation is essential for securing communication, it also provides an opportunity for attackers to hide or disguise malicious activity. One such technique is HTTP tunneling, where protocols such as FTP (File Transfer Protocol) or Telnet can be hidden within an HTTP packet. This allows unauthorized data to bypass egress filtering systems that are typically designed to restrict certain types of traffic, such as FTP, from leaving a network. By encapsulating non-HTTP traffic inside legitimate HTTP traffic, attackers can evade detection and exploit the network infrastructure for nefarious purposes.
+While encapsulation is essential for securing communication, it also provides an opportunity for attackers to hide or disguise malicious activity. One such technique is **HTTP tunneling**, where protocols such as FTP (File Transfer Protocol) or Telnet can be hidden within an HTTP packet. This allows unauthorized data to bypass egress filtering systems that are typically designed to restrict certain types of traffic, such as FTP, from leaving a network. By encapsulating non-HTTP traffic inside legitimate HTTP traffic, attackers can evade detection and exploit the network infrastructure for nefarious purposes.
 
-Similarly, encapsulation can be used to carry out more sophisticated network attacks, such as VLAN hopping. Virtual Local Area Networks (VLANs) are designed to segment network traffic into separate broadcast domains, improving network performance and security. Each VLAN is identified by a VLAN tag that is added to network frames, following the IEEE 802.1Q standard. These VLAN tags ensure that switches know which VLAN a frame belongs to and how to forward it appropriately.
+Similarly, encapsulation can be used to carry out more sophisticated network attacks, such as **VLAN hopping**. Virtual Local Area Networks (VLANs) are designed to segment network traffic into separate broadcast domains, improving network performance and security. Each VLAN is identified by a VLAN tag that is added to network frames, following the IEEE 802.1Q standard. These VLAN tags ensure that switches know which VLAN a frame belongs to and how to forward it appropriately.
 
 :bulb: IEEE 802.1Q is a networking standard that defines how VLAN (Virtual Local Area Network) tags are added to Ethernet frames. This standard allows for multiple VLANs to be transmitted over a single physical network link, enabling network segmentation without requiring separate physical infrastructure.
 
